<resources>
    <string name="app_name">AndroidAudioExample</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="notification_channel_name">Player controls</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="default_notification_channel_id">channel_id</string>
    <string name="default_notification_channel_name">channel_name</string>
</resources>
